--- a/src/Client/Localization/ProtonVPN.Client.Localization/Strings/id-ID/Resources.resw
+++ b/src/Client/Localization/ProtonVPN.Client.Localization/Strings/id-ID/Resources.resw
@@ -321,7 +321,7 @@
     <value>Proton VPN gagal mengambil sertifikat autentikasi karena masalah jaringan.</value>
   </data>
   <data name="Connection_Error_NoServers">
-    <value>Seluruh server dalam pilihan Anda sedang tidak tersedia. Silakan perluas pilihan Anda atau coba lagi nanti.</value>
+    <value>Seluruh server dalam rentang pilihan Anda sedang tidak tersedia. Silakan perluas pilihan Anda atau coba lagi nanti.</value>
   </data>
   <data name="Connection_Error_NoServers_Profile">
     <value>Pilihan server Anda untuk '{0}' tidak tersedia. Pilih server lain atau coba lagi nanti.</value>
@@ -1734,7 +1734,7 @@ Latensi yang tinggi dapat memperlambat koneksi Anda.</value>
     <value>Terima kasih atas tanggapan Anda</value>
   </data>
   <data name="Dialogs_NpsSurvey_Title">
-    <value>Seberapa terdorongkah Anda untuk menyarankan Proton VPN kepada teman?</value>
+    <value>Seberapa terdorongkah Anda untuk menyarankan Proton VPN kepada teman Anda?</value>
   </data>
   <data name="Dialogs_NpsSurvey_TryAgain">
     <value>Coba lagi</value>
@@ -2039,10 +2039,10 @@ Muatan server yang tinggi dapat memperlambat koneksi Anda.</value>
     <value>Apa yang baru</value>
   </data>
   <data name="Dialogs_WhatsNew_TrayApp_Description">
-    <value>Anda sekarang dapat menyambungkan, memutuskan, dan mengubah koneksi bawaan Anda dari bilah sistem.</value>
+    <value>Anda kini dapat menyambungkan, memutuskan, dan mengubah koneksi bawaan Anda dari bilah sistem.</value>
   </data>
   <data name="Dialogs_WhatsNew_TrayApp_Title">
-    <value>Aplikasi baki sistem baru</value>
+    <value>Aplikasi bilah sistem baru</value>
   </data>
   <data name="Exit_Confirmation_Title">
     <value>Keluar dari Proton VPN?</value>
@@ -2204,14 +2204,14 @@ Muatan server yang tinggi dapat memperlambat koneksi Anda.</value>
     <value>Menunjukkan berapa banyak data yang melewati terowongan VPN secara real time.</value>
   </data>
   <data name="Flyouts_Speed_Description2">
-    <value>Ini didasarkan pada aktivitas perangkat Anda saat ini. Dalam kebanyakan kasus, ini tidak menggambarkan kecepatan maksimum VPN.</value>
+    <value>Angka ini didasarkan pada aktivitas perangkat Anda saat ini. Dalam sebagian besar kasus, nilai yang tertera tidak menggambarkan kecepatan maksimum VPN.</value>
   </data>
   <data name="Flyouts_Speed_Download">
     <value>Unduh</value>
     <comment>Refers to the download speed (e.g., Download [new line] 10 MB/s).</comment>
   </data>
   <data name="Flyouts_Speed_KnowledgeBaseLinkTitle">
-    <value>Kecepatan VPN dan lalu lintas dijelaskan</value>
+    <value>Penjelasan seputar kecepatan dan lalu lintas VPN</value>
   </data>
   <data name="Flyouts_Speed_Title">
     <value>Lalu lintas saat ini</value>
@@ -2248,7 +2248,7 @@ Muatan server yang tinggi dapat memperlambat koneksi Anda.</value>
     <value>Dapatkan yang terbaik dari koneksi VPN dan non-VPN</value>
   </data>
   <data name="Flyouts_Volume_Description">
-    <value>Menampilkan jumlah total data yang dilewatkan melalui terowongan VPN sejak Anda sambungkan.</value>
+    <value>Menampilkan jumlah data yang dilewatkan melalui terowongan VPN sejak Anda terhubung.</value>
   </data>
   <data name="Flyouts_Volume_Download">
     <value>Unduh</value>
@@ -3271,13 +3271,13 @@ Muatan server yang tinggi dapat memperlambat koneksi Anda.</value>
     <value>Sesuaikan koneksi Anda dengan menentukan aplikasi dan alamat IP mana saja yang akan terlindung oleh VPN.</value>
   </data>
   <data name="Settings_Connection_SplitTunneling_Inverse">
-    <value>Sertakan mode</value>
+    <value>Mode penyertaan</value>
   </data>
   <data name="Settings_Connection_SplitTunneling_Inverse_Description">
     <value>Hanya aplikasi dan alamat IP yang dipilih yang akan terhubung ke VPN, sedangkan lalu lintas lainnya tidak terlindung</value>
   </data>
   <data name="Settings_Connection_SplitTunneling_Inverse_Short">
-    <value>Meliputi</value>
+    <value>Sertakan</value>
     <comment>Shorter version (if possible) of "Include mode". To be used when available space is limited.</comment>
   </data>
   <data name="Settings_Connection_SplitTunneling_IpAddresses_Add">
@@ -3294,7 +3294,7 @@ Muatan server yang tinggi dapat memperlambat koneksi Anda.</value>
     <value>Tambahkan alamat IPv4</value>
   </data>
   <data name="Settings_Connection_SplitTunneling_Standard">
-    <value>Kecualikan mode</value>
+    <value>Mode pengecualian</value>
   </data>
   <data name="Settings_Connection_SplitTunneling_Standard_Description">
     <value>Aplikasi dan alamat IP yang terpilih dikecualikan dari koneksi VPN</value>
@@ -3322,7 +3322,7 @@ Muatan server yang tinggi dapat memperlambat koneksi Anda.</value>
     <value>Umum</value>
   </data>
   <data name="Settings_General_AutoStartup">
-    <value>Pemulaian otomatis</value>
+    <value>Mulai otomatis</value>
   </data>
   <data name="Settings_General_AutoStartup_AutoConnect">
     <value>Penghubungan otomatis</value>
@@ -3830,16 +3830,16 @@ Muatan server yang tinggi dapat memperlambat koneksi Anda.</value>
     <comment>Title for the worldwide coverage upsell feature page. {0} is a placeholder for the number of servers (eg. 100 secure servers) and {1} for the number of countries available (eg. 60 countries).</comment>
   </data>
   <data name="Upsell_Carousel_WorldwideCoverage_Censorship">
-    <value>Lewati sensor dengan fitur keamanan lanjutan</value>
+    <value>Lewati sensor dengan berbagai fitur keamanan lanjutan</value>
   </data>
   <data name="Upsell_Carousel_WorldwideCoverage_Countries_Other">
     <value>{0} negara</value>
   </data>
   <data name="Upsell_Carousel_WorldwideCoverage_Features">
-    <value>Aliran, torrenting, dan lainnya yang aman</value>
+    <value>Streaming, torrenting, dan lain sebagainya secara aman</value>
   </data>
   <data name="Upsell_Carousel_WorldwideCoverage_Selection">
-    <value>Pilih negara mana pun dari jaringan di seluruh dunia kami</value>
+    <value>Pilih negara mana pun dari jaringan global kami</value>
   </data>
   <data name="Upsell_Carousel_WorldwideCoverage_Servers_Other">
     <value>{0} server aman</value>
