--- a/src/Client/Localization/ProtonVPN.Client.Localization/Strings/cs-CZ/Resources.resw
+++ b/src/Client/Localization/ProtonVPN.Client.Localization/Strings/cs-CZ/Resources.resw
@@ -1923,7 +1923,7 @@
     <value>Co je to latence?</value>
   </data>
   <data name="Dialogs_NpsSurvey_CommentLabel">
-    <value>Dejte nám prosím vědět, proč jste uvedli toto hodnocení</value>
+    <value>Dejte nám prosím vědět důvod tohoto hodnocení</value>
   </data>
   <data name="Dialogs_NpsSurvey_ErrorSubtitle">
     <value>Nemohli jsme odeslat vaši zpětnou vazbu. Zkontrolujte své připojení a zkuste to znovu.</value>
@@ -1941,7 +1941,7 @@
     <value>Volitelné</value>
   </data>
   <data name="Dialogs_NpsSurvey_ShareAnonymously">
-    <value>Sdílet anonymě</value>
+    <value>Sdílet anonymně</value>
   </data>
   <data name="Dialogs_NpsSurvey_SuccessSubtitle">
     <value>Vaše zpětná vazba nám pomáhá zlepšovat Proton VPN.</value>
@@ -2222,7 +2222,7 @@ Vysoké vytížení serveru může zpomalit vaše připojení.</value>
     <value>Vítejte v Proton VPN</value>
   </data>
   <data name="Dialogs_WhatsNew_Gateways_Description">
-    <value>K dedikovaným serverům vaší organizace můžete nyní přistupovat z postranního panelu.</value>
+    <value>K dedikovaným serverům vaší organizace můžete nyní přistupovat z hlavního postranního panelu.</value>
   </data>
   <data name="Dialogs_WhatsNew_Gateways_Title">
     <value>Brány byly přesunuty</value>
@@ -2342,7 +2342,7 @@ Vysoké vytížení serveru může zpomalit vaše připojení.</value>
     <value>Vaše IP adresa může být odhalena, pokud dojde k výpadku připojení k VPN</value>
   </data>
   <data name="Flyouts_KillSwitch_Info_Disconnected">
-    <value>Pokročilý Kill Switch deaktivuje internet a ochrání vaši IP adresu v době, kdy nejste připojeni k Proton VPN.</value>
+    <value>Pokročilý Kill Switch deaktivuje internet a tím ochrání vaši IP adresu v době, kdy jste odpojeni od Proton VPN.</value>
   </data>
   <data name="Flyouts_KillSwitch_Standard_Success">
     <value>Pokud dojde k výpadku připojení VPN, budete odpojeni od internetu, dokud nebude VPN obnovena</value>
@@ -2429,7 +2429,7 @@ Vysoké vytížení serveru může zpomalit vaše připojení.</value>
     <value>Zobrazuje v reálném čase, kolik dat prochází skrze VPN tunel.</value>
   </data>
   <data name="Flyouts_Speed_Description2">
-    <value>To je založeno na aktuální aktivitě vašeho zařízení. Ve většině případů nepředstavuje maximální rychlost VPN.</value>
+    <value>Toto je založeno na aktuální aktivitě vašeho zařízení. Ve většině případů tato hodnota nepředstavuje maximální rychlost VPN.</value>
   </data>
   <data name="Flyouts_Speed_Download">
     <value>Stahování</value>
@@ -3032,7 +3032,7 @@ Vysoké vytížení serveru může zpomalit vaše připojení.</value>
     <value>Nastavte toto číslo ve vaší aplikaci BitTorrent pro nejvyšší rychlosti.</value>
   </data>
   <data name="Notifications_SessionLimit_Description">
-    <value>Dosáhli jste maximálního limitu počtu zařízení. Chcete-li se znovu připojit k VPN, odpojte se na jiném zařízení.</value>
+    <value>Dosáhli jste limitu maximálního počtu zařízení. Chcete-li se znovu připojit k VPN, odpojte nejprve jiné zařízení.</value>
   </data>
   <data name="Notifications_SubscriptionExpired_Description_Connected">
     <value>Váš tarif byl snížen na Proton Free a přepojujeme vás k nejrychlejšímu bezplatnému serveru.</value>
@@ -3402,7 +3402,7 @@ Vysoké vytížení serveru může zpomalit vaše připojení.</value>
     <value>Povolit připojení LAN</value>
   </data>
   <data name="Settings_Connection_Advanced_LanConnections_Description">
-    <value>Umožňuje připojit tiskárny, reproduktory a ostatní zařízení ve vaší LAN.</value>
+    <value>Umožňuje připojit tiskárny, reproduktory a ostatní zařízení ve vaší místní síti (LAN).</value>
   </data>
   <data name="Settings_Connection_Advanced_NatType">
     <value>Typ NAT</value>
