--- a/src/Client/Localization/ProtonVPN.Client.Localization/Strings/hu-HU/Resources.resw
+++ b/src/Client/Localization/ProtonVPN.Client.Localization/Strings/hu-HU/Resources.resw
@@ -295,7 +295,7 @@
     <value>Frissítés...</value>
   </data>
   <data name="Common_Tags_Beta">
-    <value>BETA</value>
+    <value>BÉTA</value>
     <comment>This tag indicates that this version of the app is currently in beta (early access)</comment>
   </data>
   <data name="Common_Tags_New">
@@ -1779,37 +1779,37 @@ A magas késleltetés lelassíthatja a kapcsolatot.</value>
     <value>Mi az a késleltetés?</value>
   </data>
   <data name="Dialogs_NpsSurvey_CommentLabel">
-    <value>Please let us know why you gave that rating</value>
+    <value>Kérjük, írja meg miért adta ezt az értékelést</value>
   </data>
   <data name="Dialogs_NpsSurvey_ErrorSubtitle">
-    <value>We couldn't send your feedback. Please check your connection and try again.</value>
+    <value>Nem sikerült elküldeni a visszajelzését. Kérjük, ellenőrizze a kapcsolatot, és próbálja meg újra.</value>
   </data>
   <data name="Dialogs_NpsSurvey_ErrorTitle">
-    <value>Something went wrong</value>
+    <value>Valamilyen hiba történt</value>
   </data>
   <data name="Dialogs_NpsSurvey_HighRateDescription">
-    <value>10 is very likely</value>
+    <value>10 nagyon valószínű</value>
   </data>
   <data name="Dialogs_NpsSurvey_LowRateDescription">
-    <value>0 is very unlikely</value>
+    <value>0 nagyon valószínűtlen</value>
   </data>
   <data name="Dialogs_NpsSurvey_Optional">
-    <value>Optional</value>
+    <value>Választható</value>
   </data>
   <data name="Dialogs_NpsSurvey_ShareAnonymously">
-    <value>Share anonymously</value>
+    <value>Megosztás névtelenül</value>
   </data>
   <data name="Dialogs_NpsSurvey_SuccessSubtitle">
-    <value>Your feedback helps us improve Proton VPN.</value>
+    <value>Visszajelzése segít a Proton VPN fejlesztésében.</value>
   </data>
   <data name="Dialogs_NpsSurvey_SuccessTitle">
-    <value>Thanks for your feedback</value>
+    <value>Köszönjük a visszajelzést</value>
   </data>
   <data name="Dialogs_NpsSurvey_Title">
-    <value>How likely are you to recommend Proton VPN to a friend?</value>
+    <value>Milyen valószínűséggel ajánlaná a Proton VPN-t egy barátjának?</value>
   </data>
   <data name="Dialogs_NpsSurvey_TryAgain">
-    <value>Try again</value>
+    <value>Próbálja újra</value>
   </data>
   <data name="Dialogs_P2PDetection_Description">
     <value>A kapcsolatot letiltottuk, mert olyan kiszolgálót használ, amely nem támogatja a P2P (peer-to-peer) forgalmat. A P2P nincs támogatva az ingyenes kiszolgálókon. Kérjük, használjon másik szervert a P2P-hez.</value>
@@ -2072,16 +2072,16 @@ A nagy szerverterhelés lelassíthatja a kapcsolatot.</value>
     <value>Üdvözli a Proton VPN</value>
   </data>
   <data name="Dialogs_WhatsNew_Gateways_Description">
-    <value>You can now access your organization's dedicated servers from the main sidebar.</value>
+    <value>Mostantól a fő oldalsávról elérheti a szervezet dedikált szervereit.</value>
   </data>
   <data name="Dialogs_WhatsNew_Gateways_Title">
     <value>Az átjárók át lettek helyezve</value>
   </data>
   <data name="Dialogs_WhatsNew_LanConnections_Description">
-    <value>You can now connect to printers, speakers, and other devices on your local network (LAN), bypassing the VPN tunnel.</value>
+    <value>Mostantól kapcsolódhat nyomtatókhoz, hangszórókhoz és más eszközökhöz a helyi hálózatán (LAN), megkerülve a VPN alagutat.</value>
   </data>
   <data name="Dialogs_WhatsNew_LanConnections_Title">
-    <value>LAN connections</value>
+    <value>LAN kapcsolatok</value>
   </data>
   <data name="Dialogs_WhatsNew_NewLook_Description">
     <value>Felfrissítettük a dizájnunkat, és néhány dolgot áthelyeztünk, hogy az alkalmazás könnyebben használható legyen.</value>
@@ -2090,10 +2090,10 @@ A nagy szerverterhelés lelassíthatja a kapcsolatot.</value>
     <value>Új megjelenés, ugyanaz a védelem</value>
   </data>
   <data name="Dialogs_WhatsNew_PortNumber_Description">
-    <value>When port forwarding is enabled, you'll now see your active port number on the home screen.</value>
+    <value>Ha a port átirányítás engedélyezve van, az aktív portszám mostantól látható a kezdőképernyőn.</value>
   </data>
   <data name="Dialogs_WhatsNew_PortNumber_Title">
-    <value>Active port number</value>
+    <value>Aktív portszám</value>
   </data>
   <data name="Dialogs_WhatsNew_Profiles_Description">
     <value>Adjon hozzá speciális profilbeállításokat, például NetShield és port átirányítás, vagy állítsa be a Connect and Go funkciót, hogy a csatlakozáskor elinduljon egy Ön által kiválasztott weboldal.</value>
@@ -2114,10 +2114,10 @@ A nagy szerverterhelés lelassíthatja a kapcsolatot.</value>
     <value>Újdonságok</value>
   </data>
   <data name="Dialogs_WhatsNew_TrayApp_Description">
-    <value>You can now connect, disconnect, and change your default connection from the system tray.</value>
+    <value>Most a rendszertálcáról kapcsolódhat, leválaszthat és módosíthatja az alapértelmezett kapcsolatot.</value>
   </data>
   <data name="Dialogs_WhatsNew_TrayApp_Title">
-    <value>New system tray app</value>
+    <value>Új rendszer tálca alkalmazás</value>
   </data>
   <data name="Exit_Confirmation_Title">
     <value>Kilépés a Proton VPN-ből?</value>
@@ -2192,7 +2192,7 @@ A nagy szerverterhelés lelassíthatja a kapcsolatot.</value>
     <value>Az IP-címe nyilvánosságra kerülhet, ha a VPN-kapcsolat megszakad</value>
   </data>
   <data name="Flyouts_KillSwitch_Info_Disconnected">
-    <value>Advanced kill switch disables your internet to protect your IP address while you're not connected to Proton VPN.</value>
+    <value>A fejlett vészkapcsoló letiltja az internetkapcsolatát, hogy megvédje az IP-címét, amíg nem kapcsolódik a Proton VPN-hez.</value>
   </data>
   <data name="Flyouts_KillSwitch_Standard_Success">
     <value>Ha a VPN-kapcsolat megszakad, akkor a VPN helyreállításáig nem lesz kapcsolatban az internettel.</value>
@@ -2276,20 +2276,20 @@ A nagy szerverterhelés lelassíthatja a kapcsolatot.</value>
     <value>A VPN Accelerator segítségével gyorsítva</value>
   </data>
   <data name="Flyouts_Speed_Description1">
-    <value>Shows how much data goes through the VPN tunnel in real time.</value>
+    <value>Megmutatja, mennyi adat megy át a VPN-alagúton valós időben.</value>
   </data>
   <data name="Flyouts_Speed_Description2">
-    <value>This is based on your device's current activity. In most cases, it doesn't represent the VPN's maximum speed.</value>
+    <value>Ez az eszköz aktuális aktivitásán alapul. A legtöbb esetben ez nem a VPN maximális sebességét jelenti.</value>
   </data>
   <data name="Flyouts_Speed_Download">
     <value>Letöltés</value>
     <comment>Refers to the download speed (e.g., Download [new line] 10 MB/s).</comment>
   </data>
   <data name="Flyouts_Speed_KnowledgeBaseLinkTitle">
-    <value>VPN speed and traffic explained</value>
+    <value>VPN sebesség és forgalom magyarázata</value>
   </data>
   <data name="Flyouts_Speed_Title">
-    <value>Current traffic</value>
+    <value>Jelenlegi forgalom</value>
   </data>
   <data name="Flyouts_Speed_Upload">
     <value>Feltöltés</value>
@@ -2335,14 +2335,14 @@ A nagy szerverterhelés lelassíthatja a kapcsolatot.</value>
     <value>Mindkét világból a legjobbat kapja</value>
   </data>
   <data name="Flyouts_Volume_Description">
-    <value>Shows the total amount of data passed through the VPN tunnel since you connected.</value>
+    <value>Megmutatja a VPN alagúton keresztül átvitt összes adatmennyiséget, mióta csatlakozott.</value>
   </data>
   <data name="Flyouts_Volume_Download">
     <value>Letöltés</value>
     <comment>Refers to the downloaded volume (e.g., Download [new line] 250 MB).</comment>
   </data>
   <data name="Flyouts_Volume_Title">
-    <value>Total traffic</value>
+    <value>Összes forgalom</value>
   </data>
   <data name="Flyouts_Volume_Upload">
     <value>Feltöltés</value>
@@ -2381,7 +2381,7 @@ A nagy szerverterhelés lelassíthatja a kapcsolatot.</value>
     <comment>Format a size in Terabytes. {0} is a place holder for the number of Terabytes (eg. 30 TB)</comment>
   </data>
   <data name="Format_SpeedUnit">
-    <value>Current traffic ({0})</value>
+    <value>Jelenlegi forgalom ({0})</value>
     <comment>This string is used to format speed measurements in various units. The placeholder {0} will be replaced by the appropriate unit of measurement, such as B/s (Bytes per second), kB/s (Kilobytes per second), MB/s (Megabytes per second), and so on.</comment>
   </data>
   <data name="Format_Speed_BytesPerSecond">
@@ -2437,10 +2437,10 @@ A nagy szerverterhelés lelassíthatja a kapcsolatot.</value>
     <comment>Format a time as a number of hours, minutes and seconds in a short format. 'hh' is a placeholder for the number of hours, 'mm' is a placeholder for the number of minutes and 'ss' for the number of seconds. The separator (if any) needs to be escaped using '' character (eg. hh\:mm\:ss gives 01:05:36).</comment>
   </data>
   <data name="Format_Time_Hours_Ago_One">
-    <value>{0} hour ago</value>
+    <value>{0} órával ezelőtt</value>
   </data>
   <data name="Format_Time_Hours_Ago_Other">
-    <value>{0} hours ago</value>
+    <value>{0} órával ezelőtt</value>
   </data>
   <data name="Format_Time_Minutes">
     <value>{0} perc</value>
@@ -2455,20 +2455,20 @@ A nagy szerverterhelés lelassíthatja a kapcsolatot.</value>
     <comment>Format a time as a number of minutes and seconds in a short format. 'mm' is a placeholder for the number of minutes and 'ss' for the number of seconds. The separator (if any) needs to be escaped using '' character (eg. mm\:ss gives 05:36).</comment>
   </data>
   <data name="Format_Time_Minutes_Ago_One">
-    <value>{0} minute ago</value>
+    <value>{0} perccel ezelőtt</value>
   </data>
   <data name="Format_Time_Minutes_Ago_Other">
-    <value>{0} minutes ago</value>
+    <value>{0} perccel ezelőtt</value>
   </data>
   <data name="Format_Time_Seconds">
     <value>{0} mp</value>
     <comment>Format a time as a number of seconds. {0} is a placeholder for the number of second (eg. 1 sec or 20 sec). Use abbreviations for seconds, no pluralization.</comment>
   </data>
   <data name="Format_Time_Seconds_Ago_One">
-    <value>{0} second ago</value>
+    <value>{0} másodperccel ezelőtt</value>
   </data>
   <data name="Format_Time_Seconds_Ago_Other">
-    <value>{0} seconds ago</value>
+    <value>{0} másodperccel ezelőtt</value>
   </data>
   <data name="FreeConnections_P2PUpsell">
     <value>Fájlok letöltése BitTorrent és más fájlmegosztó protokollokon keresztül</value>
@@ -2536,13 +2536,13 @@ A nagy szerverterhelés lelassíthatja a kapcsolatot.</value>
     <comment>Landmarks are not displayed on screen but read by a screen reader to identify a group of components for accessibility purposes.</comment>
   </data>
   <data name="Home_ConnectionDetails_AdvancedKillSwitchActivated">
-    <value>Advanced kill switch activated</value>
+    <value>Haladó vészkapcsoló aktiválva</value>
   </data>
   <data name="Home_ConnectionDetails_City">
     <value>Város</value>
   </data>
   <data name="Home_ConnectionDetails_ConnectToRestoreConnection">
-    <value>Connect to VPN to restore your internet connection.</value>
+    <value>Csatlakozzon a VPN-hez az internetkapcsolat helyreállításához.</value>
   </data>
   <data name="Home_ConnectionDetails_ConnectedFor">
     <value>Kapcsolódva</value>
@@ -2615,7 +2615,7 @@ A nagy szerverterhelés lelassíthatja a kapcsolatot.</value>
     <value>Titkosítsa online tevékenységét VPN-hez való csatlakozással.</value>
   </data>
   <data name="Home_ConnectionDetails_Volume">
-    <value>Total traffic</value>
+    <value>Összes forgalom</value>
   </data>
   <data name="Home_ConnectionDetails_Volume_Download">
     <value>Letöltött mennyiség</value>
@@ -2816,7 +2816,7 @@ A nagy szerverterhelés lelassíthatja a kapcsolatot.</value>
     <value>A nagyobb sebesség érdekében állítsa be ezt a számot a BitTorrent alkalmazásban.</value>
   </data>
   <data name="Notifications_SessionLimit_Description">
-    <value>You've reached your maximum device limit. To reconnect to VPN, please disconnect from another device.</value>
+    <value>Elérte a maximális eszközlimitet. A VPN-hez való újbóli csatlakozáshoz kérjük, válassza le a kapcsolatot egy másik eszközről.</value>
   </data>
   <data name="Notifications_SubscriptionExpired_Description_Connected">
     <value>A díjcsomagját visszaállítottuk Proton Free-re, és visszakapcsoljuk a leggyorsabb ingyenes szerverre.</value>
@@ -2828,7 +2828,7 @@ A nagy szerverterhelés lelassíthatja a kapcsolatot.</value>
     <value>Nem biztonságos Wi-Fi kapcsolat észlelve</value>
   </data>
   <data name="NpsSurvey_Title">
-    <value>Proton VPN - Survey</value>
+    <value>Proton VPN - felmérés</value>
     <comment>The window title displayed at the top of the NPS (Net Promoter Score) survey</comment>
   </data>
   <data name="Overlay_OutdatedClient_Action">
@@ -3183,10 +3183,10 @@ A nagy szerverterhelés lelassíthatja a kapcsolatot.</value>
     <value>Megakadályozza az IPv6 kiszivárgását az IPv6-címekhez való kapcsolatok blokkolásával.</value>
   </data>
   <data name="Settings_Connection_Advanced_LanConnections">
-    <value>Allow LAN connections</value>
+    <value>LAN kapcsolatok engedélyezése</value>
   </data>
   <data name="Settings_Connection_Advanced_LanConnections_Description">
-    <value>Allows connections to printers, speakers, and other devices in your local network.</value>
+    <value>Lehetővé teszi a nyomtatókhoz, hangszórókhoz és egyéb eszközökhöz való csatlakozást a helyi hálózatában.</value>
   </data>
   <data name="Settings_Connection_Advanced_NatType">
     <value>NAT típus</value>
@@ -3324,7 +3324,7 @@ A nagy szerverterhelés lelassíthatja a kapcsolatot.</value>
     <value>A porttovábbítás használatához csatlakozzon olyan kiszolgálóhoz, amely támogatja a P2P-t.</value>
   </data>
   <data name="Settings_Connection_PortForwarding_LastChanged">
-    <value>Last changed: {0}</value>
+    <value>Utoljára módosítva: {0}</value>
     <comment>Indicates when the active port was changed for the last time. {0} is a placeholder for the time. (eg. "Last changed: 5 minutes ago" or "Last changed: May 20, at 14:32")</comment>
   </data>
   <data name="Settings_Connection_PortForwarding_Loading">
@@ -3379,13 +3379,13 @@ A nagy szerverterhelés lelassíthatja a kapcsolatot.</value>
     <value>Eldöntheti, hogy mely alkalmazásokat és IP-címeket védje a VPN.</value>
   </data>
   <data name="Settings_Connection_SplitTunneling_Inverse">
-    <value>Include mode</value>
+    <value>Befoglaló mód</value>
   </data>
   <data name="Settings_Connection_SplitTunneling_Inverse_Description">
     <value>Csak a kiválasztott alkalmazások és IP-címek csatlakoznak VPN-en keresztül, minden más forgalom védtelen.</value>
   </data>
   <data name="Settings_Connection_SplitTunneling_Inverse_Short">
-    <value>Include</value>
+    <value>Tartalmaz</value>
     <comment>Shorter version (if possible) of "Include mode". To be used when available space is limited.</comment>
   </data>
   <data name="Settings_Connection_SplitTunneling_IpAddresses_Add">
@@ -3402,13 +3402,13 @@ A nagy szerverterhelés lelassíthatja a kapcsolatot.</value>
     <value>IPv4 címek hozzáadása</value>
   </data>
   <data name="Settings_Connection_SplitTunneling_Standard">
-    <value>Exclude mode</value>
+    <value>Kihagyás mód</value>
   </data>
   <data name="Settings_Connection_SplitTunneling_Standard_Description">
     <value>A kiválasztott alkalmazások és IP-címek ki vannak zárva a VPN-kapcsolatból</value>
   </data>
   <data name="Settings_Connection_SplitTunneling_Standard_Short">
-    <value>Exclude</value>
+    <value>Kihagy</value>
     <comment>Shorter version (if possible) of "Exclude mode". To be used when available space is limited.</comment>
   </data>
   <data name="Settings_Connection_VpnAccelerator">
@@ -3740,7 +3740,7 @@ A nagy szerverterhelés lelassíthatja a kapcsolatot.</value>
     <comment>Button displayed in the tray icon to open the Proton VPN application. {0} is a placeholder for the name of the application (eg. "Open Proton VPN")</comment>
   </data>
   <data name="Tray_Actions_OpenApplicationToSignIn">
-    <value>Open app to sign in</value>
+    <value>Nyissa meg az alkalmazást a bejelentkezéshez</value>
   </data>
   <data name="Unit_BytesPerSecond">
     <value>B/mp</value>
@@ -3871,16 +3871,16 @@ A nagy szerverterhelés lelassíthatja a kapcsolatot.</value>
     <value>Küldjön adatot teljesen biztonságos svájci, svéd és izlandi szervereken keresztül</value>
   </data>
   <data name="Upsell_Carousel_Speed">
-    <value>Browse at even higher speeds</value>
+    <value>Még nagyobb sebességgel böngészhet</value>
   </data>
   <data name="Upsell_Carousel_Speed_Acceleration">
-    <value>Browse up to 400% faster with VPN Accelerator</value>
+    <value>Böngésszen akár 400%-kal gyorsabban a VPN Acceleratorral</value>
   </data>
   <data name="Upsell_Carousel_Speed_Access">
     <value>Hozzáférés gyorsabb, kevésbé forgalmas szerverekhez</value>
   </data>
   <data name="Upsell_Carousel_Speed_Traffic">
-    <value>Get connection speeds of up to 10 Gbps</value>
+    <value>Akár 10 Gbps-os kapcsolati sebesség</value>
   </data>
   <data name="Upsell_Carousel_SplitTunneling">
     <value>Mindkét világból a legjobbat kapja</value>
@@ -3938,7 +3938,7 @@ A nagy szerverterhelés lelassíthatja a kapcsolatot.</value>
     <comment>Title for the worldwide coverage upsell feature page. {0} is a placeholder for the number of servers (eg. 100 secure servers) and {1} for the number of countries available (eg. 60 countries).</comment>
   </data>
   <data name="Upsell_Carousel_WorldwideCoverage_Censorship">
-    <value>Bypass censorship with advanced security features</value>
+    <value>A cenzúra megkerülése magas szintű biztonsági funkciókkal</value>
   </data>
   <data name="Upsell_Carousel_WorldwideCoverage_Countries_One">
     <value>{0} ország</value>
@@ -3947,10 +3947,10 @@ A nagy szerverterhelés lelassíthatja a kapcsolatot.</value>
     <value>{0} ország</value>
   </data>
   <data name="Upsell_Carousel_WorldwideCoverage_Features">
-    <value>Secure streaming, torrenting, and more</value>
+    <value>Biztonságos videózás, torrentezés és még sok más</value>
   </data>
   <data name="Upsell_Carousel_WorldwideCoverage_Selection">
-    <value>Select any country from our worldwide network</value>
+    <value>Válasszon bármely országot a világméretű hálózatunkból</value>
   </data>
   <data name="Upsell_Carousel_WorldwideCoverage_Servers_One">
     <value>{0} biztonságos szerver</value>
