--- a/src/Client/Localization/ProtonVPN.Client.Localization/Strings/ko-KR/Resources.resw
+++ b/src/Client/Localization/ProtonVPN.Client.Localization/Strings/ko-KR/Resources.resw
@@ -295,7 +295,7 @@
     <value>업데이트 중...</value>
   </data>
   <data name="Common_Tags_Beta">
-    <value>BETA</value>
+    <value>베타</value>
     <comment>This tag indicates that this version of the app is currently in beta (early access)</comment>
   </data>
   <data name="Common_Tags_New">
@@ -1707,37 +1707,37 @@
     <value>레이턴시라는 것은?</value>
   </data>
   <data name="Dialogs_NpsSurvey_CommentLabel">
-    <value>Please let us know why you gave that rating</value>
+    <value>저희에게 이 점수를 주신 이유를 알려주세요</value>
   </data>
   <data name="Dialogs_NpsSurvey_ErrorSubtitle">
-    <value>We couldn't send your feedback. Please check your connection and try again.</value>
+    <value>피드백을 전송하는데 실패했습니다. 인터넷 연결 상태를 확인하시고 다시 시도해 주세요.</value>
   </data>
   <data name="Dialogs_NpsSurvey_ErrorTitle">
-    <value>Something went wrong</value>
+    <value>문제가 발생했습니다</value>
   </data>
   <data name="Dialogs_NpsSurvey_HighRateDescription">
-    <value>10 is very likely</value>
+    <value>10은 매우 가능성이 높음</value>
   </data>
   <data name="Dialogs_NpsSurvey_LowRateDescription">
-    <value>0 is very unlikely</value>
+    <value>0은 매우 가능성이 낮음</value>
   </data>
   <data name="Dialogs_NpsSurvey_Optional">
-    <value>Optional</value>
+    <value>선택 사항</value>
   </data>
   <data name="Dialogs_NpsSurvey_ShareAnonymously">
-    <value>Share anonymously</value>
+    <value>익명으로 공유</value>
   </data>
   <data name="Dialogs_NpsSurvey_SuccessSubtitle">
-    <value>Your feedback helps us improve Proton VPN.</value>
+    <value>회원님의 피드백은 Proton VPN을 향상하는데 도움이 됩니다.</value>
   </data>
   <data name="Dialogs_NpsSurvey_SuccessTitle">
-    <value>Thanks for your feedback</value>
+    <value>피드백 주셔서 감사합니다</value>
   </data>
   <data name="Dialogs_NpsSurvey_Title">
-    <value>How likely are you to recommend Proton VPN to a friend?</value>
+    <value>Proton VPN을 친구나 동료에게 얼마나 추천하실 것 같나요?</value>
   </data>
   <data name="Dialogs_NpsSurvey_TryAgain">
-    <value>Try again</value>
+    <value>다시 시도</value>
   </data>
   <data name="Dialogs_P2PDetection_Description">
     <value>사용 중인 서버가 P2P 트래픽을 지원하지 않아 연결이 해제되었습니다. P2P는 무료 서버에서 지원되지 않습니다. P2P를 지원하는 다른 서버를 사용해 주세요.</value>
@@ -1997,16 +1997,16 @@
     <value>Proton VPN에 오신 것을 환영합니다</value>
   </data>
   <data name="Dialogs_WhatsNew_Gateways_Description">
-    <value>You can now access your organization's dedicated servers from the main sidebar.</value>
+    <value>이제 메인 사이드바에서 조직의 전용 서버에 접근할 수 있어요.</value>
   </data>
   <data name="Dialogs_WhatsNew_Gateways_Title">
     <value>게이트웨이 위치 변경</value>
   </data>
   <data name="Dialogs_WhatsNew_LanConnections_Description">
-    <value>You can now connect to printers, speakers, and other devices on your local network (LAN), bypassing the VPN tunnel.</value>
+    <value>이제 VPN 터널을 우회하여 로컬 네트워크(LAN)의 프린터, 스피커 및 기타 장치에 연결할 수 있어요.</value>
   </data>
   <data name="Dialogs_WhatsNew_LanConnections_Title">
-    <value>LAN connections</value>
+    <value>LAN 연결</value>
   </data>
   <data name="Dialogs_WhatsNew_NewLook_Description">
     <value>앱을 더 쉽게 사용하실 수 있도록 새로 디자인하고 몇 가지 요소를 이동시켰어요.</value>
@@ -2015,10 +2015,10 @@
     <value>달라 보여도, 똑같은 보호</value>
   </data>
   <data name="Dialogs_WhatsNew_PortNumber_Description">
-    <value>When port forwarding is enabled, you'll now see your active port number on the home screen.</value>
+    <value>포트 포워딩 활성화시, 이제 홈 화면에서 사용자의 활성 포트 번호를 확인할 수 있습니다.</value>
   </data>
   <data name="Dialogs_WhatsNew_PortNumber_Title">
-    <value>Active port number</value>
+    <value>활성 포트 번호</value>
   </data>
   <data name="Dialogs_WhatsNew_Profiles_Description">
     <value>NetShield 및 포트 포워딩과 같은 고급 프로필 설정을 추가하거나 연결 및 시작하기 기능을 설정하여 VPN 연결과 동시에 설정한 웹 사이트도 바로 열 수 있어요.</value>
@@ -2039,10 +2039,10 @@
     <value>새로운 소식</value>
   </data>
   <data name="Dialogs_WhatsNew_TrayApp_Description">
-    <value>You can now connect, disconnect, and change your default connection from the system tray.</value>
+    <value>이제 시스템 트레이에서 연결, 연결 해제 및 기본 연결을 변경할 수 있습니다.</value>
   </data>
   <data name="Dialogs_WhatsNew_TrayApp_Title">
-    <value>New system tray app</value>
+    <value>새로운 시스템 트래이 앱</value>
   </data>
   <data name="Exit_Confirmation_Title">
     <value>Proton VPN을 종료합니까?</value>
@@ -2117,7 +2117,7 @@
     <value>VPN 연결이 끊어지면 IP 주소가 노출될 수 있습니다.</value>
   </data>
   <data name="Flyouts_KillSwitch_Info_Disconnected">
-    <value>Advanced kill switch disables your internet to protect your IP address while you're not connected to Proton VPN.</value>
+    <value>향상된 킬 스위치는 Proton VPN에 연결되지 않은 상태에서 사용자의 IP 주소를 보호하기 위해 인터넷을 비활성화합니다.</value>
   </data>
   <data name="Flyouts_KillSwitch_Standard_Success">
     <value>VPN 연결이 끊어지면 VPN이 복원될 때까지 인터넷 연결이 끊어집니다.</value>
@@ -2201,20 +2201,20 @@
     <value>VPN Accelerator로 가속됨</value>
   </data>
   <data name="Flyouts_Speed_Description1">
-    <value>Shows how much data goes through the VPN tunnel in real time.</value>
+    <value>VPN 터널을 통해 실시간으로 전송되는 데이터 양을 보여줍니다.</value>
   </data>
   <data name="Flyouts_Speed_Description2">
-    <value>This is based on your device's current activity. In most cases, it doesn't represent the VPN's maximum speed.</value>
+    <value>이 자료는 사용자 기기의 현재 활동에 기반합니다. 대부분의 경우, VPN의 최대 속도를 나타내지 않습니다.</value>
   </data>
   <data name="Flyouts_Speed_Download">
     <value>다운로드</value>
     <comment>Refers to the download speed (e.g., Download [new line] 10 MB/s).</comment>
   </data>
   <data name="Flyouts_Speed_KnowledgeBaseLinkTitle">
-    <value>VPN speed and traffic explained</value>
+    <value>VPN 속도 및 트래픽 설명</value>
   </data>
   <data name="Flyouts_Speed_Title">
-    <value>Current traffic</value>
+    <value>현재 트래픽</value>
   </data>
   <data name="Flyouts_Speed_Upload">
     <value>업로드</value>
@@ -2248,14 +2248,14 @@
     <value>하나로 두 가지 이득을 얻으세요</value>
   </data>
   <data name="Flyouts_Volume_Description">
-    <value>Shows the total amount of data passed through the VPN tunnel since you connected.</value>
+    <value>연결 이후 VPN 터널을 통해 전송된 총 데이터량을 표시합니다.</value>
   </data>
   <data name="Flyouts_Volume_Download">
     <value>다운로드</value>
     <comment>Refers to the downloaded volume (e.g., Download [new line] 250 MB).</comment>
   </data>
   <data name="Flyouts_Volume_Title">
-    <value>Total traffic</value>
+    <value>총 트래픽</value>
   </data>
   <data name="Flyouts_Volume_Upload">
     <value>업로드</value>
@@ -2294,7 +2294,7 @@
     <comment>Format a size in Terabytes. {0} is a place holder for the number of Terabytes (eg. 30 TB)</comment>
   </data>
   <data name="Format_SpeedUnit">
-    <value>Current traffic ({0})</value>
+    <value>현재 트래픽 ({0})</value>
     <comment>This string is used to format speed measurements in various units. The placeholder {0} will be replaced by the appropriate unit of measurement, such as B/s (Bytes per second), kB/s (Kilobytes per second), MB/s (Megabytes per second), and so on.</comment>
   </data>
   <data name="Format_Speed_BytesPerSecond">
@@ -2344,7 +2344,7 @@
     <comment>Format a time as a number of hours, minutes and seconds in a short format. 'hh' is a placeholder for the number of hours, 'mm' is a placeholder for the number of minutes and 'ss' for the number of seconds. The separator (if any) needs to be escaped using '' character (eg. hh\:mm\:ss gives 01:05:36).</comment>
   </data>
   <data name="Format_Time_Hours_Ago_Other">
-    <value>{0} hours ago</value>
+    <value>{0}시간 전</value>
   </data>
   <data name="Format_Time_Minutes">
     <value>{0}분</value>
@@ -2359,14 +2359,14 @@
     <comment>Format a time as a number of minutes and seconds in a short format. 'mm' is a placeholder for the number of minutes and 'ss' for the number of seconds. The separator (if any) needs to be escaped using '' character (eg. mm\:ss gives 05:36).</comment>
   </data>
   <data name="Format_Time_Minutes_Ago_Other">
-    <value>{0} minutes ago</value>
+    <value>{0}분 전</value>
   </data>
   <data name="Format_Time_Seconds">
     <value>{0}초</value>
     <comment>Format a time as a number of seconds. {0} is a placeholder for the number of second (eg. 1 sec or 20 sec). Use abbreviations for seconds, no pluralization.</comment>
   </data>
   <data name="Format_Time_Seconds_Ago_Other">
-    <value>{0} seconds ago</value>
+    <value>{0}초 전</value>
   </data>
   <data name="FreeConnections_P2PUpsell">
     <value>BitTorrent와 다른 파일 공유 프로토콜로 파일을 다운로드하세요</value>
@@ -2434,13 +2434,13 @@
     <comment>Landmarks are not displayed on screen but read by a screen reader to identify a group of components for accessibility purposes.</comment>
   </data>
   <data name="Home_ConnectionDetails_AdvancedKillSwitchActivated">
-    <value>Advanced kill switch activated</value>
+    <value>향상된 킬 스위치가 활성화됨</value>
   </data>
   <data name="Home_ConnectionDetails_City">
     <value>시/군/구</value>
   </data>
   <data name="Home_ConnectionDetails_ConnectToRestoreConnection">
-    <value>Connect to VPN to restore your internet connection.</value>
+    <value>VPN에 연결하여 인터넷 연결을 복원하세요.</value>
   </data>
   <data name="Home_ConnectionDetails_ConnectedFor">
     <value>연결된 시간</value>
@@ -2513,7 +2513,7 @@
     <value>VPN을 연결하여 온라인 활동을 암호화하세요.</value>
   </data>
   <data name="Home_ConnectionDetails_Volume">
-    <value>Total traffic</value>
+    <value>총 트래픽</value>
   </data>
   <data name="Home_ConnectionDetails_Volume_Download">
     <value>볼륨 다운로드</value>
@@ -2708,7 +2708,7 @@
     <value>더 빠른 속도를 위해 BitTorrent 앱에서 이 번호로 설정하세요.</value>
   </data>
   <data name="Notifications_SessionLimit_Description">
-    <value>You've reached your maximum device limit. To reconnect to VPN, please disconnect from another device.</value>
+    <value>최대 기기 수 제한에 도달했습니다. VPN에 다시 연결하기 위해, 다른 기기에서 연결 해제해주세요.</value>
   </data>
   <data name="Notifications_SubscriptionExpired_Description_Connected">
     <value>사용자의 플랜이 Proton Free로 다운그레이드 되어, 가장 빠른 무료 서버로 재연결 중입니다.</value>
@@ -2720,7 +2720,7 @@
     <value>보호되지 않는 Wi-Fi 연결 감지됨</value>
   </data>
   <data name="NpsSurvey_Title">
-    <value>Proton VPN - Survey</value>
+    <value>Proton VPN - 설문</value>
     <comment>The window title displayed at the top of the NPS (Net Promoter Score) survey</comment>
   </data>
   <data name="Overlay_OutdatedClient_Action">
@@ -3075,10 +3075,10 @@ VPN 연결</value>
     <value>IPv6 주소로의 연결을 차단하여 IPv6 유출을 방지합니다.</value>
   </data>
   <data name="Settings_Connection_Advanced_LanConnections">
-    <value>Allow LAN connections</value>
+    <value>LAN 연결 허용</value>
   </data>
   <data name="Settings_Connection_Advanced_LanConnections_Description">
-    <value>Allows connections to printers, speakers, and other devices in your local network.</value>
+    <value>로컬 네트워크에 있는 프린터, 스피커 및 기타 기기에 연결할 수 있게 합니다.</value>
   </data>
   <data name="Settings_Connection_Advanced_NatType">
     <value>NAT 방식</value>
@@ -3216,7 +3216,7 @@ VPN 연결</value>
     <value>포트 포워딩을 사용하려면 P2P를 지원하는 서버에 연결하세요.</value>
   </data>
   <data name="Settings_Connection_PortForwarding_LastChanged">
-    <value>Last changed: {0}</value>
+    <value>최근 변경: {0}</value>
     <comment>Indicates when the active port was changed for the last time. {0} is a placeholder for the time. (eg. "Last changed: 5 minutes ago" or "Last changed: May 20, at 14:32")</comment>
   </data>
   <data name="Settings_Connection_PortForwarding_Loading">
@@ -3271,13 +3271,13 @@ VPN 연결</value>
     <value>VPN이 보호할 앱과 IP 주소를 지정하여 연결을 사용자화할 수 있습니다.</value>
   </data>
   <data name="Settings_Connection_SplitTunneling_Inverse">
-    <value>Include mode</value>
+    <value>포함 모드</value>
   </data>
   <data name="Settings_Connection_SplitTunneling_Inverse_Description">
     <value>선택된 앱과 IP 주소만이 VPN에 연결되고 그 외 트래픽은 보호되지 않습니다.</value>
   </data>
   <data name="Settings_Connection_SplitTunneling_Inverse_Short">
-    <value>Include</value>
+    <value>포함</value>
     <comment>Shorter version (if possible) of "Include mode". To be used when available space is limited.</comment>
   </data>
   <data name="Settings_Connection_SplitTunneling_IpAddresses_Add">
@@ -3294,13 +3294,13 @@ VPN 연결</value>
     <value>IPv4 주소 추가</value>
   </data>
   <data name="Settings_Connection_SplitTunneling_Standard">
-    <value>Exclude mode</value>
+    <value>제외 모드</value>
   </data>
   <data name="Settings_Connection_SplitTunneling_Standard_Description">
     <value>VPN 연결에서 제외될 앱들과 IP주소들을 선택하세요</value>
   </data>
   <data name="Settings_Connection_SplitTunneling_Standard_Short">
-    <value>Exclude</value>
+    <value>제외</value>
     <comment>Shorter version (if possible) of "Exclude mode". To be used when available space is limited.</comment>
   </data>
   <data name="Settings_Connection_VpnAccelerator">
@@ -3632,7 +3632,7 @@ VPN 연결</value>
     <comment>Button displayed in the tray icon to open the Proton VPN application. {0} is a placeholder for the name of the application (eg. "Open Proton VPN")</comment>
   </data>
   <data name="Tray_Actions_OpenApplicationToSignIn">
-    <value>Open app to sign in</value>
+    <value>앱을 실행하여 로그인하세요</value>
   </data>
   <data name="Unit_BytesPerSecond">
     <value>B/초</value>
@@ -3763,16 +3763,16 @@ VPN 연결</value>
     <value>스위스, 스웨덴과 아이슬란드의 아주 안전한 서버를 통해 라우팅하세요</value>
   </data>
   <data name="Upsell_Carousel_Speed">
-    <value>Browse at even higher speeds</value>
+    <value>더 빠른 속도로 브라우징</value>
   </data>
   <data name="Upsell_Carousel_Speed_Acceleration">
-    <value>Browse up to 400% faster with VPN Accelerator</value>
+    <value>VPN Accelerator로 최대 400% 인터넷 속도 가속화</value>
   </data>
   <data name="Upsell_Carousel_Speed_Access">
     <value>빠르고, 더 여유있는 서버에 접근하세요</value>
   </data>
   <data name="Upsell_Carousel_Speed_Traffic">
-    <value>Get connection speeds of up to 10 Gbps</value>
+    <value>최대 10 Gbps의 속도로 인터넷에 연결</value>
   </data>
   <data name="Upsell_Carousel_SplitTunneling">
     <value>하나로 두 가지 이득을 얻으세요</value>
@@ -3830,16 +3830,16 @@ VPN 연결</value>
     <comment>Title for the worldwide coverage upsell feature page. {0} is a placeholder for the number of servers (eg. 100 secure servers) and {1} for the number of countries available (eg. 60 countries).</comment>
   </data>
   <data name="Upsell_Carousel_WorldwideCoverage_Censorship">
-    <value>Bypass censorship with advanced security features</value>
+    <value>향상된 보안과 개인정보 보호 기능으로 검열 우회</value>
   </data>
   <data name="Upsell_Carousel_WorldwideCoverage_Countries_Other">
     <value>{0} 국가</value>
   </data>
   <data name="Upsell_Carousel_WorldwideCoverage_Features">
-    <value>Secure streaming, torrenting, and more</value>
+    <value>안전한 스트리밍, 토렌팅 등</value>
   </data>
   <data name="Upsell_Carousel_WorldwideCoverage_Selection">
-    <value>Select any country from our worldwide network</value>
+    <value>전 세계 네트워크에서 아무 나라나 선택하세요</value>
   </data>
   <data name="Upsell_Carousel_WorldwideCoverage_Servers_Other">
     <value>{0}개 보안 서버</value>
