--- a/src/Client/Localization/ProtonVPN.Client.Localization/Strings/sk-SK/Resources.resw
+++ b/src/Client/Localization/ProtonVPN.Client.Localization/Strings/sk-SK/Resources.resw
@@ -1923,37 +1923,37 @@ Vysoká latencia môže spomaliť vaše pripojenie.</value>
     <value>Čo je to latencia?</value>
   </data>
   <data name="Dialogs_NpsSurvey_CommentLabel">
-    <value>Please let us know why you gave that rating</value>
+    <value>Dajte nám, prosím, vedieť, prečo ste udelili toto hodnotenie</value>
   </data>
   <data name="Dialogs_NpsSurvey_ErrorSubtitle">
-    <value>We couldn't send your feedback. Please check your connection and try again.</value>
+    <value>Vašu spätnú väzbu sme nemohli odoslať. Skontrolujte svoje pripojenie a skúste to znova, prosím.</value>
   </data>
   <data name="Dialogs_NpsSurvey_ErrorTitle">
-    <value>Something went wrong</value>
+    <value>Niečo sa pokazilo</value>
   </data>
   <data name="Dialogs_NpsSurvey_HighRateDescription">
-    <value>10 is very likely</value>
+    <value>10 je vysoko pravdepodobne</value>
   </data>
   <data name="Dialogs_NpsSurvey_LowRateDescription">
-    <value>0 is very unlikely</value>
+    <value>0 je veľmi nepravdepodobne</value>
   </data>
   <data name="Dialogs_NpsSurvey_Optional">
-    <value>Optional</value>
+    <value>Voliteľné</value>
   </data>
   <data name="Dialogs_NpsSurvey_ShareAnonymously">
-    <value>Share anonymously</value>
+    <value>Zdieľať anonymne</value>
   </data>
   <data name="Dialogs_NpsSurvey_SuccessSubtitle">
-    <value>Your feedback helps us improve Proton VPN.</value>
+    <value>Vaša spätná väzba nám pomáha zlepšovať Proton VPN.</value>
   </data>
   <data name="Dialogs_NpsSurvey_SuccessTitle">
-    <value>Thanks for your feedback</value>
+    <value>Ďakujeme za vašu spätnú väzbu</value>
   </data>
   <data name="Dialogs_NpsSurvey_Title">
-    <value>How likely are you to recommend Proton VPN to a friend?</value>
+    <value>Aká je pravdepodobnosť, že odporučíte Proton VPN svojmu priateľovi?</value>
   </data>
   <data name="Dialogs_NpsSurvey_TryAgain">
-    <value>Try again</value>
+    <value>Skúste znova</value>
   </data>
   <data name="Dialogs_P2PDetection_Description">
     <value>Vaše pripojenie bolo deaktivované, pretože používate server, ktorý nepodporuje prevádzku peer-to-peer (P2P). P2P nie je podporované na bezplatných serveroch. Pre P2P použite iný server.</value>
@@ -2222,16 +2222,16 @@ Vysoké vyťaženie servera môže spomaliť vaše pripojenie.</value>
     <value>Víta vás Proton VPN</value>
   </data>
   <data name="Dialogs_WhatsNew_Gateways_Description">
-    <value>You can now access your organization's dedicated servers from the main sidebar.</value>
+    <value>K vyhradeným serverom vašej organizácie môžete teraz pristupovať z hlavného bočného panela.</value>
   </data>
   <data name="Dialogs_WhatsNew_Gateways_Title">
     <value>Brány boli presunuté</value>
   </data>
   <data name="Dialogs_WhatsNew_LanConnections_Description">
-    <value>You can now connect to printers, speakers, and other devices on your local network (LAN), bypassing the VPN tunnel.</value>
+    <value>Teraz sa môžete pripojiť k tlačiarňam, reproduktorom a iným zariadeniam vo vašej lokálnej sieti (LAN) obídením VPN tunela.</value>
   </data>
   <data name="Dialogs_WhatsNew_LanConnections_Title">
-    <value>LAN connections</value>
+    <value>LAN pripojenia</value>
   </data>
   <data name="Dialogs_WhatsNew_NewLook_Description">
     <value>Vylepšili sme náš dizajn a presunuli niektoré veci, aby sa aplikácia ľahšie používala.</value>
@@ -2240,10 +2240,10 @@ Vysoké vyťaženie servera môže spomaliť vaše pripojenie.</value>
     <value>Nový vzhľad, tá istá ochrana</value>
   </data>
   <data name="Dialogs_WhatsNew_PortNumber_Description">
-    <value>When port forwarding is enabled, you'll now see your active port number on the home screen.</value>
+    <value>Keď je presmerovanie portu povolené, uvidíte vaše aktívne číslo portu na domovskej obrazovke.</value>
   </data>
   <data name="Dialogs_WhatsNew_PortNumber_Title">
-    <value>Active port number</value>
+    <value>Číslo aktívneho portu</value>
   </data>
   <data name="Dialogs_WhatsNew_Profiles_Description">
     <value>Pridajte pokročilé nastavenia profilu, ako je NetShield a presmerovanie portov, alebo nastavte funkciu Pripojiť a spustiť, aby sa po pripojení otvorila webová stránka podľa vášho výberu.</value>
@@ -2264,10 +2264,10 @@ Vysoké vyťaženie servera môže spomaliť vaše pripojenie.</value>
     <value>Čo je nové</value>
   </data>
   <data name="Dialogs_WhatsNew_TrayApp_Description">
-    <value>You can now connect, disconnect, and change your default connection from the system tray.</value>
+    <value>Teraz môžete pripojiť, odpojiť a zmeniť vaše predvolené pripojenie zo systémovej lišty.</value>
   </data>
   <data name="Dialogs_WhatsNew_TrayApp_Title">
-    <value>New system tray app</value>
+    <value>Nová aplikácia na systémovej lište</value>
   </data>
   <data name="Exit_Confirmation_Title">
     <value>Ukončiť Proton VPN?</value>
@@ -2342,7 +2342,7 @@ Vysoké vyťaženie servera môže spomaliť vaše pripojenie.</value>
     <value>Vaša IP adresa môže byť odhalená, ak sa VPN pripojenie preruší</value>
   </data>
   <data name="Flyouts_KillSwitch_Info_Disconnected">
-    <value>Advanced kill switch disables your internet to protect your IP address while you're not connected to Proton VPN.</value>
+    <value>Pokročilý kill switch deaktivuje váš internet na ochranu vašej IP adresy, keď nemáte pripojenie k Proton VPN.</value>
   </data>
   <data name="Flyouts_KillSwitch_Standard_Success">
     <value>Ak sa VPN pripojenie preruší, zostanete bez pripojenia na internet, kým sa VPN neobnoví</value>
@@ -2426,20 +2426,20 @@ Vysoké vyťaženie servera môže spomaliť vaše pripojenie.</value>
     <value>Zrýchlené pomocou VPN Accelerator</value>
   </data>
   <data name="Flyouts_Speed_Description1">
-    <value>Shows how much data goes through the VPN tunnel in real time.</value>
+    <value>Ukazuje, koľko dát prechádza cez VPN tunel v reálnom čase.</value>
   </data>
   <data name="Flyouts_Speed_Description2">
-    <value>This is based on your device's current activity. In most cases, it doesn't represent the VPN's maximum speed.</value>
+    <value>Toto je založené na aktuálnej aktivite vášho zariadenia. Vo väčšine prípadov nepredstavuje maximálnu rýchlosť VPN.</value>
   </data>
   <data name="Flyouts_Speed_Download">
     <value>Sťahovanie</value>
     <comment>Refers to the download speed (e.g., Download [new line] 10 MB/s).</comment>
   </data>
   <data name="Flyouts_Speed_KnowledgeBaseLinkTitle">
-    <value>VPN speed and traffic explained</value>
+    <value>Vysvetlenie rýchlosti a prevádzky VPN</value>
   </data>
   <data name="Flyouts_Speed_Title">
-    <value>Current traffic</value>
+    <value>Aktuálna prevádzka</value>
   </data>
   <data name="Flyouts_Speed_Upload">
     <value>Nahrávanie</value>
@@ -2509,14 +2509,14 @@ Vysoké vyťaženie servera môže spomaliť vaše pripojenie.</value>
     <value>Získajte to najlepšie z oboch svetov</value>
   </data>
   <data name="Flyouts_Volume_Description">
-    <value>Shows the total amount of data passed through the VPN tunnel since you connected.</value>
+    <value>Zobrazuje celkové množstvo dát prenesených cez VPN tunel odkedy ste sa pripojili.</value>
   </data>
   <data name="Flyouts_Volume_Download">
     <value>Sťahovanie</value>
     <comment>Refers to the downloaded volume (e.g., Download [new line] 250 MB).</comment>
   </data>
   <data name="Flyouts_Volume_Title">
-    <value>Total traffic</value>
+    <value>Celková prevádzka</value>
   </data>
   <data name="Flyouts_Volume_Upload">
     <value>Nahrávanie</value>
@@ -2555,7 +2555,7 @@ Vysoké vyťaženie servera môže spomaliť vaše pripojenie.</value>
     <comment>Format a size in Terabytes. {0} is a place holder for the number of Terabytes (eg. 30 TB)</comment>
   </data>
   <data name="Format_SpeedUnit">
-    <value>Current traffic ({0})</value>
+    <value>Aktuálna prevádzka ({0})</value>
     <comment>This string is used to format speed measurements in various units. The placeholder {0} will be replaced by the appropriate unit of measurement, such as B/s (Bytes per second), kB/s (Kilobytes per second), MB/s (Megabytes per second), and so on.</comment>
   </data>
   <data name="Format_Speed_BytesPerSecond">
@@ -2623,16 +2623,16 @@ Vysoké vyťaženie servera môže spomaliť vaše pripojenie.</value>
     <comment>Format a time as a number of hours, minutes and seconds in a short format. 'hh' is a placeholder for the number of hours, 'mm' is a placeholder for the number of minutes and 'ss' for the number of seconds. The separator (if any) needs to be escaped using '' character (eg. hh\:mm\:ss gives 01:05:36).</comment>
   </data>
   <data name="Format_Time_Hours_Ago_One">
-    <value>{0} hour ago</value>
+    <value>pred {0} hodinou</value>
   </data>
   <data name="Format_Time_Hours_Ago_Few">
-    <value>{0} hours ago</value>
+    <value>pred {0} hodinami</value>
   </data>
   <data name="Format_Time_Hours_Ago_Many">
-    <value>{0} hours ago</value>
+    <value>pred {0} hodinami</value>
   </data>
   <data name="Format_Time_Hours_Ago_Other">
-    <value>{0} hours ago</value>
+    <value>pred {0} hodinami</value>
   </data>
   <data name="Format_Time_Minutes">
     <value>{0} min</value>
@@ -2647,32 +2647,32 @@ Vysoké vyťaženie servera môže spomaliť vaše pripojenie.</value>
     <comment>Format a time as a number of minutes and seconds in a short format. 'mm' is a placeholder for the number of minutes and 'ss' for the number of seconds. The separator (if any) needs to be escaped using '' character (eg. mm\:ss gives 05:36).</comment>
   </data>
   <data name="Format_Time_Minutes_Ago_One">
-    <value>{0} minute ago</value>
+    <value>pred {0} minútou</value>
   </data>
   <data name="Format_Time_Minutes_Ago_Few">
-    <value>{0} minutes ago</value>
+    <value>pred {0} minútami</value>
   </data>
   <data name="Format_Time_Minutes_Ago_Many">
-    <value>{0} minutes ago</value>
+    <value>pred {0} minútami</value>
   </data>
   <data name="Format_Time_Minutes_Ago_Other">
-    <value>{0} minutes ago</value>
+    <value>pred {0} minútami</value>
   </data>
   <data name="Format_Time_Seconds">
     <value>{0} s</value>
     <comment>Format a time as a number of seconds. {0} is a placeholder for the number of second (eg. 1 sec or 20 sec). Use abbreviations for seconds, no pluralization.</comment>
   </data>
   <data name="Format_Time_Seconds_Ago_One">
-    <value>{0} second ago</value>
+    <value>pred {0} sekundou</value>
   </data>
   <data name="Format_Time_Seconds_Ago_Few">
-    <value>{0} seconds ago</value>
+    <value>pred {0} sekundami</value>
   </data>
   <data name="Format_Time_Seconds_Ago_Many">
-    <value>{0} seconds ago</value>
+    <value>pred {0} sekundami</value>
   </data>
   <data name="Format_Time_Seconds_Ago_Other">
-    <value>{0} seconds ago</value>
+    <value>pred {0} sekundami</value>
   </data>
   <data name="FreeConnections_P2PUpsell">
     <value>Sťahujte súbory cez BitTorrent a iné protokoly na zdieľanie súborov</value>
@@ -2740,13 +2740,13 @@ Vysoké vyťaženie servera môže spomaliť vaše pripojenie.</value>
     <comment>Landmarks are not displayed on screen but read by a screen reader to identify a group of components for accessibility purposes.</comment>
   </data>
   <data name="Home_ConnectionDetails_AdvancedKillSwitchActivated">
-    <value>Advanced kill switch activated</value>
+    <value>Pokročilý kill switch zapnutý</value>
   </data>
   <data name="Home_ConnectionDetails_City">
     <value>Mesto</value>
   </data>
   <data name="Home_ConnectionDetails_ConnectToRestoreConnection">
-    <value>Connect to VPN to restore your internet connection.</value>
+    <value>Pripojte sa k VPN pre obnovenie vášho internetového pripojenia.</value>
   </data>
   <data name="Home_ConnectionDetails_ConnectedFor">
     <value>Pripojené</value>
@@ -2819,7 +2819,7 @@ Vysoké vyťaženie servera môže spomaliť vaše pripojenie.</value>
     <value>Šifrujte svoje online aktivity pripojením k VPN.</value>
   </data>
   <data name="Home_ConnectionDetails_Volume">
-    <value>Total traffic</value>
+    <value>Celková prevádzka</value>
   </data>
   <data name="Home_ConnectionDetails_Volume_Download">
     <value>Stiahnutý objem dát</value>
@@ -3032,7 +3032,7 @@ Vysoké vyťaženie servera môže spomaliť vaše pripojenie.</value>
     <value>Nastavte toto číslo vo vašej aplikácii BitTorrent pre najvyššie rýchlosti.</value>
   </data>
   <data name="Notifications_SessionLimit_Description">
-    <value>You've reached your maximum device limit. To reconnect to VPN, please disconnect from another device.</value>
+    <value>Dosiahli ste maximálny limit počtu zariadení. Ak sa chcete znovu pripojiť k VPN, odpojte sa v inom zariadení.</value>
   </data>
   <data name="Notifications_SubscriptionExpired_Description_Connected">
     <value>Vaša tarifa bola znížená na Proton Free a prepájame vás k najrýchlejšiemu bezplatnému serveru.</value>
@@ -3044,7 +3044,7 @@ Vysoké vyťaženie servera môže spomaliť vaše pripojenie.</value>
     <value>Bolo zistené nezabezpečené WiFi pripojenie</value>
   </data>
   <data name="NpsSurvey_Title">
-    <value>Proton VPN - Survey</value>
+    <value>Proton VPN - Prieskum</value>
     <comment>The window title displayed at the top of the NPS (Net Promoter Score) survey</comment>
   </data>
   <data name="Overlay_OutdatedClient_Action">
@@ -3399,10 +3399,10 @@ Vysoké vyťaženie servera môže spomaliť vaše pripojenie.</value>
     <value>Zabraňuje únikom IPv6 blokovaním pripojenia k adresám IPv6.</value>
   </data>
   <data name="Settings_Connection_Advanced_LanConnections">
-    <value>Allow LAN connections</value>
+    <value>Povoliť pripojenie k sieti LAN</value>
   </data>
   <data name="Settings_Connection_Advanced_LanConnections_Description">
-    <value>Allows connections to printers, speakers, and other devices in your local network.</value>
+    <value>Umožňuje pripojiť tlačiarne, reproduktory a ďalšie zariadenia vo vašej lokálnej sieti.</value>
   </data>
   <data name="Settings_Connection_Advanced_NatType">
     <value>Typ NAT</value>
@@ -3540,7 +3540,7 @@ Vysoké vyťaženie servera môže spomaliť vaše pripojenie.</value>
     <value>Ak chcete použiť presmerovanie portov, pripojte sa k serveru, ktorý podporuje P2P.</value>
   </data>
   <data name="Settings_Connection_PortForwarding_LastChanged">
-    <value>Last changed: {0}</value>
+    <value>Naposledy zmenené: {0}</value>
     <comment>Indicates when the active port was changed for the last time. {0} is a placeholder for the time. (eg. "Last changed: 5 minutes ago" or "Last changed: May 20, at 14:32")</comment>
   </data>
   <data name="Settings_Connection_PortForwarding_Loading">
@@ -3595,13 +3595,13 @@ Vysoké vyťaženie servera môže spomaliť vaše pripojenie.</value>
     <value>Prispôsobte si pripojenie tým, že sa rozhodnete, ktoré aplikácie a IP adresy budú chránené pomocou VPN.</value>
   </data>
   <data name="Settings_Connection_SplitTunneling_Inverse">
-    <value>Include mode</value>
+    <value>Režim zahrnutia</value>
   </data>
   <data name="Settings_Connection_SplitTunneling_Inverse_Description">
     <value>Cez VPN sa pripájajú iba vybrané aplikácie a IP adresy, všetka ďalšia prevádzka je nechránená</value>
   </data>
   <data name="Settings_Connection_SplitTunneling_Inverse_Short">
-    <value>Include</value>
+    <value>Zahrnúť</value>
     <comment>Shorter version (if possible) of "Include mode". To be used when available space is limited.</comment>
   </data>
   <data name="Settings_Connection_SplitTunneling_IpAddresses_Add">
@@ -3618,13 +3618,13 @@ Vysoké vyťaženie servera môže spomaliť vaše pripojenie.</value>
     <value>Pridať adresu IPv4</value>
   </data>
   <data name="Settings_Connection_SplitTunneling_Standard">
-    <value>Exclude mode</value>
+    <value>Režim vylúčenia</value>
   </data>
   <data name="Settings_Connection_SplitTunneling_Standard_Description">
     <value>Vybrané aplikácie a IP adresy sú vylúčené z pripojenia VPN</value>
   </data>
   <data name="Settings_Connection_SplitTunneling_Standard_Short">
-    <value>Exclude</value>
+    <value>Vylúčiť</value>
     <comment>Shorter version (if possible) of "Exclude mode". To be used when available space is limited.</comment>
   </data>
   <data name="Settings_Connection_VpnAccelerator">
@@ -3956,7 +3956,7 @@ Vysoké vyťaženie servera môže spomaliť vaše pripojenie.</value>
     <comment>Button displayed in the tray icon to open the Proton VPN application. {0} is a placeholder for the name of the application (eg. "Open Proton VPN")</comment>
   </data>
   <data name="Tray_Actions_OpenApplicationToSignIn">
-    <value>Open app to sign in</value>
+    <value>Otvoriť aplikáciu pre prihlásenie</value>
   </data>
   <data name="Unit_BytesPerSecond">
     <value>B/s</value>
@@ -4087,16 +4087,16 @@ Vysoké vyťaženie servera môže spomaliť vaše pripojenie.</value>
     <value>Smerovanie cez mimoriadne zabezpečené servery vo Švajčiarsku, Švédsku a Islande</value>
   </data>
   <data name="Upsell_Carousel_Speed">
-    <value>Browse at even higher speeds</value>
+    <value>Prehliadajte ešte vyššou rýchlosťou</value>
   </data>
   <data name="Upsell_Carousel_Speed_Acceleration">
-    <value>Browse up to 400% faster with VPN Accelerator</value>
+    <value>Prehliadajte až o 400 % rýchlejšie s VPN Acceleratorom</value>
   </data>
   <data name="Upsell_Carousel_Speed_Access">
     <value>Získajte prístup k rýchlejším, menej vyťaženým serverom</value>
   </data>
   <data name="Upsell_Carousel_Speed_Traffic">
-    <value>Get connection speeds of up to 10 Gbps</value>
+    <value>Získajte rýchlosti pripojenia až do 10 Gbps</value>
   </data>
   <data name="Upsell_Carousel_SplitTunneling">
     <value>Získajte to najlepšie z oboch svetov</value>
@@ -4154,7 +4154,7 @@ Vysoké vyťaženie servera môže spomaliť vaše pripojenie.</value>
     <comment>Title for the worldwide coverage upsell feature page. {0} is a placeholder for the number of servers (eg. 100 secure servers) and {1} for the number of countries available (eg. 60 countries).</comment>
   </data>
   <data name="Upsell_Carousel_WorldwideCoverage_Censorship">
-    <value>Bypass censorship with advanced security features</value>
+    <value>Obchádzajte cenzúru pomocou pokročilých funkcií zabezpečenia</value>
   </data>
   <data name="Upsell_Carousel_WorldwideCoverage_Countries_One">
     <value>{0} krajina</value>
@@ -4169,10 +4169,10 @@ Vysoké vyťaženie servera môže spomaliť vaše pripojenie.</value>
     <value>{0} krajín</value>
   </data>
   <data name="Upsell_Carousel_WorldwideCoverage_Features">
-    <value>Secure streaming, torrenting, and more</value>
+    <value>Bezpečné streamovanie, torrentovanie a ďalšie</value>
   </data>
   <data name="Upsell_Carousel_WorldwideCoverage_Selection">
-    <value>Select any country from our worldwide network</value>
+    <value>Vyberte akúkoľvek krajinu z našej celosvetovej siete.</value>
   </data>
   <data name="Upsell_Carousel_WorldwideCoverage_Servers_One">
     <value>{0} bezpečný server</value>
