--- a/src/Client/Localization/ProtonVPN.Client.Localization/Strings/uk-UA/Resources.resw
+++ b/src/Client/Localization/ProtonVPN.Client.Localization/Strings/uk-UA/Resources.resw
@@ -295,7 +295,7 @@
     <value>Оновлення...</value>
   </data>
   <data name="Common_Tags_Beta">
-    <value>BETA</value>
+    <value>БЕТА</value>
     <comment>This tag indicates that this version of the app is currently in beta (early access)</comment>
   </data>
   <data name="Common_Tags_New">
@@ -1923,37 +1923,37 @@
     <value>Що таке затримка?</value>
   </data>
   <data name="Dialogs_NpsSurvey_CommentLabel">
-    <value>Please let us know why you gave that rating</value>
+    <value>Повідомте, чому ви поставили таку оцінку</value>
   </data>
   <data name="Dialogs_NpsSurvey_ErrorSubtitle">
-    <value>We couldn't send your feedback. Please check your connection and try again.</value>
+    <value>Не вдалося надіслати ваш відгук. Перевірте своє з'єднання і повторіть спробу.</value>
   </data>
   <data name="Dialogs_NpsSurvey_ErrorTitle">
-    <value>Something went wrong</value>
+    <value>Щось пішло не так</value>
   </data>
   <data name="Dialogs_NpsSurvey_HighRateDescription">
-    <value>10 is very likely</value>
+    <value>10 – цілком ймовірно</value>
   </data>
   <data name="Dialogs_NpsSurvey_LowRateDescription">
-    <value>0 is very unlikely</value>
+    <value>0 – дуже малоймовірно</value>
   </data>
   <data name="Dialogs_NpsSurvey_Optional">
-    <value>Optional</value>
+    <value>Необов'язково</value>
   </data>
   <data name="Dialogs_NpsSurvey_ShareAnonymously">
-    <value>Share anonymously</value>
+    <value>Поділитися анонімно</value>
   </data>
   <data name="Dialogs_NpsSurvey_SuccessSubtitle">
-    <value>Your feedback helps us improve Proton VPN.</value>
+    <value>Ваш відгук допомагає нам удосконалити Proton VPN.</value>
   </data>
   <data name="Dialogs_NpsSurvey_SuccessTitle">
-    <value>Thanks for your feedback</value>
+    <value>Дякуємо за відгук</value>
   </data>
   <data name="Dialogs_NpsSurvey_Title">
-    <value>How likely are you to recommend Proton VPN to a friend?</value>
+    <value>Наскільки ймовірно, що ви порекомендуєте Proton VPN друзям?</value>
   </data>
   <data name="Dialogs_NpsSurvey_TryAgain">
-    <value>Try again</value>
+    <value>Повторити спробу</value>
   </data>
   <data name="Dialogs_P2PDetection_Description">
     <value>Ваше з'єднання було вимкнено, тому що ви користуєтеся сервером, що не підтримує одноранговий трафік (P2P). P2P не підтримується на безплатних серверах. Використайте інший сервер для P2P.</value>
@@ -2222,16 +2222,16 @@
     <value>Вітаємо у Proton VPN</value>
   </data>
   <data name="Dialogs_WhatsNew_Gateways_Description">
-    <value>You can now access your organization's dedicated servers from the main sidebar.</value>
+    <value>Тепер ви можете вибирати виділені сервери своєї організації на головній бічній панелі.</value>
   </data>
   <data name="Dialogs_WhatsNew_Gateways_Title">
     <value>Мережеві шлюзи переміщено</value>
   </data>
   <data name="Dialogs_WhatsNew_LanConnections_Description">
-    <value>You can now connect to printers, speakers, and other devices on your local network (LAN), bypassing the VPN tunnel.</value>
+    <value>Тепер ви можете з'єднатися з принтерами, гучномовцями та іншими пристроями у вашій локальній мережі (LAN), в обхід тунелю VPN.</value>
   </data>
   <data name="Dialogs_WhatsNew_LanConnections_Title">
-    <value>LAN connections</value>
+    <value>LAN-з'єднання</value>
   </data>
   <data name="Dialogs_WhatsNew_NewLook_Description">
     <value>Ми оновили дизайн і дещо змінили, щоб програмою було легше користуватися.</value>
@@ -2240,10 +2240,10 @@
     <value>Новий вигляд, той самий захист</value>
   </data>
   <data name="Dialogs_WhatsNew_PortNumber_Description">
-    <value>When port forwarding is enabled, you'll now see your active port number on the home screen.</value>
+    <value>Тепер, якщо ввімкнено переспрямування портів, ви побачите номер активного порту на головному екрані.</value>
   </data>
   <data name="Dialogs_WhatsNew_PortNumber_Title">
-    <value>Active port number</value>
+    <value>Номер активного порту</value>
   </data>
   <data name="Dialogs_WhatsNew_Profiles_Description">
     <value>Додайте розширені налаштування профілю, як-от NetShield і переспрямування портів, або налаштуйте відкриття вебсайту після з'єднання з VPN.</value>
@@ -2264,10 +2264,10 @@
     <value>Що нового</value>
   </data>
   <data name="Dialogs_WhatsNew_TrayApp_Description">
-    <value>You can now connect, disconnect, and change your default connection from the system tray.</value>
+    <value>Тепер ви можете керувати своїм з'єднанням із системного лотка.</value>
   </data>
   <data name="Dialogs_WhatsNew_TrayApp_Title">
-    <value>New system tray app</value>
+    <value>Нова програма для системного лотка</value>
   </data>
   <data name="Exit_Confirmation_Title">
     <value>Вийти з Proton VPN?</value>
@@ -2342,7 +2342,7 @@
     <value>У разі втрати VPN-з'єднання може розкритися ваша IP-адреса</value>
   </data>
   <data name="Flyouts_KillSwitch_Info_Disconnected">
-    <value>Advanced kill switch disables your internet to protect your IP address while you're not connected to Proton VPN.</value>
+    <value>Розширений Kill Switch вимикає інтернет-з'єднання, щоб захистити вашу IP-адресу, поки не встановлено з'єднання Proton VPN.</value>
   </data>
   <data name="Flyouts_KillSwitch_Standard_Success">
     <value>Якщо VPN-з'єднання розірветься, доступ до інтернету буде заблоковано доки не відновиться VPN.</value>
@@ -2426,20 +2426,20 @@
     <value>Прискорено завдяки VPN Accelerator</value>
   </data>
   <data name="Flyouts_Speed_Description1">
-    <value>Shows how much data goes through the VPN tunnel in real time.</value>
+    <value>Інформація в реальному часі про обсяг даних, що проходить через VPN-тунель.</value>
   </data>
   <data name="Flyouts_Speed_Description2">
-    <value>This is based on your device's current activity. In most cases, it doesn't represent the VPN's maximum speed.</value>
+    <value>Залежить від поточної активності вашого пристрою. Зазвичай – це не максимальна швидкість VPN.</value>
   </data>
   <data name="Flyouts_Speed_Download">
     <value>Завантажити</value>
     <comment>Refers to the download speed (e.g., Download [new line] 10 MB/s).</comment>
   </data>
   <data name="Flyouts_Speed_KnowledgeBaseLinkTitle">
-    <value>VPN speed and traffic explained</value>
+    <value>Пояснення щодо швидкості й трафіку VPN</value>
   </data>
   <data name="Flyouts_Speed_Title">
-    <value>Current traffic</value>
+    <value>Поточний трафік</value>
   </data>
   <data name="Flyouts_Speed_Upload">
     <value>Вивантажити</value>
@@ -2509,14 +2509,14 @@
     <value>Відчуйте переваги повного контролю VPN-з'єднання</value>
   </data>
   <data name="Flyouts_Volume_Description">
-    <value>Shows the total amount of data passed through the VPN tunnel since you connected.</value>
+    <value>Загальний обсяг даних, переданих через VPN-тунель протягом активного з'єднання.</value>
   </data>
   <data name="Flyouts_Volume_Download">
     <value>Завантажити</value>
     <comment>Refers to the downloaded volume (e.g., Download [new line] 250 MB).</comment>
   </data>
   <data name="Flyouts_Volume_Title">
-    <value>Total traffic</value>
+    <value>Загальний трафік</value>
   </data>
   <data name="Flyouts_Volume_Upload">
     <value>Вивантажити</value>
@@ -2555,7 +2555,7 @@
     <comment>Format a size in Terabytes. {0} is a place holder for the number of Terabytes (eg. 30 TB)</comment>
   </data>
   <data name="Format_SpeedUnit">
-    <value>Current traffic ({0})</value>
+    <value>Поточний трафік ({0})</value>
     <comment>This string is used to format speed measurements in various units. The placeholder {0} will be replaced by the appropriate unit of measurement, such as B/s (Bytes per second), kB/s (Kilobytes per second), MB/s (Megabytes per second), and so on.</comment>
   </data>
   <data name="Format_Speed_BytesPerSecond">
@@ -2623,16 +2623,16 @@
     <comment>Format a time as a number of hours, minutes and seconds in a short format. 'hh' is a placeholder for the number of hours, 'mm' is a placeholder for the number of minutes and 'ss' for the number of seconds. The separator (if any) needs to be escaped using '' character (eg. hh\:mm\:ss gives 01:05:36).</comment>
   </data>
   <data name="Format_Time_Hours_Ago_One">
-    <value>{0} hour ago</value>
+    <value>{0} годину тому</value>
   </data>
   <data name="Format_Time_Hours_Ago_Few">
-    <value>{0} hours ago</value>
+    <value>{0} години тому</value>
   </data>
   <data name="Format_Time_Hours_Ago_Many">
-    <value>{0} hours ago</value>
+    <value>{0} годин тому</value>
   </data>
   <data name="Format_Time_Hours_Ago_Other">
-    <value>{0} hours ago</value>
+    <value>{0} годин тому</value>
   </data>
   <data name="Format_Time_Minutes">
     <value>{0} хв</value>
@@ -2647,32 +2647,32 @@
     <comment>Format a time as a number of minutes and seconds in a short format. 'mm' is a placeholder for the number of minutes and 'ss' for the number of seconds. The separator (if any) needs to be escaped using '' character (eg. mm\:ss gives 05:36).</comment>
   </data>
   <data name="Format_Time_Minutes_Ago_One">
-    <value>{0} minute ago</value>
+    <value>{0} хвилину тому</value>
   </data>
   <data name="Format_Time_Minutes_Ago_Few">
-    <value>{0} minutes ago</value>
+    <value>{0} хвилини тому</value>
   </data>
   <data name="Format_Time_Minutes_Ago_Many">
-    <value>{0} minutes ago</value>
+    <value>{0} хвилин тому</value>
   </data>
   <data name="Format_Time_Minutes_Ago_Other">
-    <value>{0} minutes ago</value>
+    <value>{0} хвилин тому</value>
   </data>
   <data name="Format_Time_Seconds">
     <value>{0} с</value>
     <comment>Format a time as a number of seconds. {0} is a placeholder for the number of second (eg. 1 sec or 20 sec). Use abbreviations for seconds, no pluralization.</comment>
   </data>
   <data name="Format_Time_Seconds_Ago_One">
-    <value>{0} second ago</value>
+    <value>{0} секунду тому</value>
   </data>
   <data name="Format_Time_Seconds_Ago_Few">
-    <value>{0} seconds ago</value>
+    <value>{0} секунди тому</value>
   </data>
   <data name="Format_Time_Seconds_Ago_Many">
-    <value>{0} seconds ago</value>
+    <value>{0} секунд тому</value>
   </data>
   <data name="Format_Time_Seconds_Ago_Other">
-    <value>{0} seconds ago</value>
+    <value>{0} секунд тому</value>
   </data>
   <data name="FreeConnections_P2PUpsell">
     <value>Завантажуйте файли через BitTorrent й інші протоколи обміну файлами</value>
@@ -2740,13 +2740,13 @@
     <comment>Landmarks are not displayed on screen but read by a screen reader to identify a group of components for accessibility purposes.</comment>
   </data>
   <data name="Home_ConnectionDetails_AdvancedKillSwitchActivated">
-    <value>Advanced kill switch activated</value>
+    <value>Розширений Kill Switch активовано</value>
   </data>
   <data name="Home_ConnectionDetails_City">
     <value>Місто</value>
   </data>
   <data name="Home_ConnectionDetails_ConnectToRestoreConnection">
-    <value>Connect to VPN to restore your internet connection.</value>
+    <value>Під'єднайтеся до VPN, щоб відновити інтернет-з'єднання.</value>
   </data>
   <data name="Home_ConnectionDetails_ConnectedFor">
     <value>Тривалість з'єднання</value>
@@ -2819,7 +2819,7 @@
     <value>Зашифруйте свої дії в Інтернеті, під'єднавшись до VPN.</value>
   </data>
   <data name="Home_ConnectionDetails_Volume">
-    <value>Total traffic</value>
+    <value>Загальний трафік</value>
   </data>
   <data name="Home_ConnectionDetails_Volume_Download">
     <value>Завантажено</value>
@@ -3032,7 +3032,7 @@
     <value>Встановіть це значення у вашій програмі BitTorrent для вищої швидкості.</value>
   </data>
   <data name="Notifications_SessionLimit_Description">
-    <value>You've reached your maximum device limit. To reconnect to VPN, please disconnect from another device.</value>
+    <value>Ви досягли ліміту пристроїв. Щоб під'єднати цей пристрій до VPN, від'єднайте інший.</value>
   </data>
   <data name="Notifications_SubscriptionExpired_Description_Connected">
     <value>Ваш тарифний план змінено до Proton Free, і триває повторне під'єднання до найшвидшого безплатного сервера.</value>
@@ -3044,7 +3044,7 @@
     <value>Виявлено незахищене з'єднання Wi-Fi</value>
   </data>
   <data name="NpsSurvey_Title">
-    <value>Proton VPN - Survey</value>
+    <value>Proton VPN – опитування</value>
     <comment>The window title displayed at the top of the NPS (Net Promoter Score) survey</comment>
   </data>
   <data name="Overlay_OutdatedClient_Action">
@@ -3399,10 +3399,10 @@ VPN-з'єднання</value>
     <value>Запобігання витоку IPv6 блокуванням під'єднання до адрес IPv6.</value>
   </data>
   <data name="Settings_Connection_Advanced_LanConnections">
-    <value>Allow LAN connections</value>
+    <value>Дозволити LAN-з'єднання</value>
   </data>
   <data name="Settings_Connection_Advanced_LanConnections_Description">
-    <value>Allows connections to printers, speakers, and other devices in your local network.</value>
+    <value>Можливість під'єднуватися до принтерів, гучномовців та інших пристроїв у вашій локальній мережі.</value>
   </data>
   <data name="Settings_Connection_Advanced_NatType">
     <value>NAT Type</value>
@@ -3540,7 +3540,7 @@ VPN-з'єднання</value>
     <value>Для використання переспрямування портів, під'єднайтеся до сервера, який підтримує P2P.</value>
   </data>
   <data name="Settings_Connection_PortForwarding_LastChanged">
-    <value>Last changed: {0}</value>
+    <value>Востаннє змінено: {0}</value>
     <comment>Indicates when the active port was changed for the last time. {0} is a placeholder for the time. (eg. "Last changed: 5 minutes ago" or "Last changed: May 20, at 14:32")</comment>
   </data>
   <data name="Settings_Connection_PortForwarding_Loading">
@@ -3595,13 +3595,13 @@ VPN-з'єднання</value>
     <value>Налаштуйте своє з'єднання, визначивши програми та IP-адреси, які захищаються VPN.</value>
   </data>
   <data name="Settings_Connection_SplitTunneling_Inverse">
-    <value>Include mode</value>
+    <value>Режим включення</value>
   </data>
   <data name="Settings_Connection_SplitTunneling_Inverse_Description">
     <value>Лише вибрані програми та IP-адреси під'єднуються через VPN, а весь інший трафік не захищається</value>
   </data>
   <data name="Settings_Connection_SplitTunneling_Inverse_Short">
-    <value>Include</value>
+    <value>Включити</value>
     <comment>Shorter version (if possible) of "Include mode". To be used when available space is limited.</comment>
   </data>
   <data name="Settings_Connection_SplitTunneling_IpAddresses_Add">
@@ -3618,13 +3618,13 @@ VPN-з'єднання</value>
     <value>Додати адресу IPv4</value>
   </data>
   <data name="Settings_Connection_SplitTunneling_Standard">
-    <value>Exclude mode</value>
+    <value>Режим винятків</value>
   </data>
   <data name="Settings_Connection_SplitTunneling_Standard_Description">
     <value>Вибрані програми та IP-адреси виключаються з VPN-з'єднання</value>
   </data>
   <data name="Settings_Connection_SplitTunneling_Standard_Short">
-    <value>Exclude</value>
+    <value>Винятки</value>
     <comment>Shorter version (if possible) of "Exclude mode". To be used when available space is limited.</comment>
   </data>
   <data name="Settings_Connection_VpnAccelerator">
@@ -3956,7 +3956,7 @@ VPN-з'єднання</value>
     <comment>Button displayed in the tray icon to open the Proton VPN application. {0} is a placeholder for the name of the application (eg. "Open Proton VPN")</comment>
   </data>
   <data name="Tray_Actions_OpenApplicationToSignIn">
-    <value>Open app to sign in</value>
+    <value>Відкрийте програму, щоб увійти</value>
   </data>
   <data name="Unit_BytesPerSecond">
     <value>Б/с</value>
@@ -4087,16 +4087,16 @@ VPN-з'єднання</value>
     <value>Спрямовуйте передачу даних через найзахищеніші сервери у Швейцарії, Швеції та Ісландії</value>
   </data>
   <data name="Upsell_Carousel_Speed">
-    <value>Browse at even higher speeds</value>
+    <value>Користуйтеся інтернетом з більшою швидкістю</value>
   </data>
   <data name="Upsell_Carousel_Speed_Acceleration">
-    <value>Browse up to 400% faster with VPN Accelerator</value>
+    <value>Користуйтеся інтернетом до 400% швидше завдяки VPN Accelerator</value>
   </data>
   <data name="Upsell_Carousel_Speed_Access">
     <value>Користуйтеся швидшими, менш навантаженими серверами</value>
   </data>
   <data name="Upsell_Carousel_Speed_Traffic">
-    <value>Get connection speeds of up to 10 Gbps</value>
+    <value>Отримайте швидкість з'єднання до 10 Гбіт/с</value>
   </data>
   <data name="Upsell_Carousel_SplitTunneling">
     <value>Відчуйте переваги повного контролю VPN-з'єднання</value>
@@ -4154,7 +4154,7 @@ VPN-з'єднання</value>
     <comment>Title for the worldwide coverage upsell feature page. {0} is a placeholder for the number of servers (eg. 100 secure servers) and {1} for the number of countries available (eg. 60 countries).</comment>
   </data>
   <data name="Upsell_Carousel_WorldwideCoverage_Censorship">
-    <value>Bypass censorship with advanced security features</value>
+    <value>Обходьте цензуру за допомогою розширених функцій безпеки</value>
   </data>
   <data name="Upsell_Carousel_WorldwideCoverage_Countries_One">
     <value>{0} країні</value>
@@ -4169,10 +4169,10 @@ VPN-з'єднання</value>
     <value>{0} країнах</value>
   </data>
   <data name="Upsell_Carousel_WorldwideCoverage_Features">
-    <value>Secure streaming, torrenting, and more</value>
+    <value>Безпечна потокова трансляція, торенти й інші можливості</value>
   </data>
   <data name="Upsell_Carousel_WorldwideCoverage_Selection">
-    <value>Select any country from our worldwide network</value>
+    <value>Виберіть будь-яку країну з нашої всесвітньої мережі</value>
   </data>
   <data name="Upsell_Carousel_WorldwideCoverage_Servers_One">
     <value>{0} захищеного сервера</value>
